- Fixed save/restore (inform7 #4)
- Glk errors thrown by the interpreter are shown in the browser console instead
  of printing them on the screen
- Errors thrown by JavaScript code executed in the story file now show the code
  in the error message (#33)
- JavaScript evaluation now uses new Function() instead of eval() which is
  significantly faster in some browsers


Project
-------

- The code is updated to use latest JavaScript features (ES6) and the build
  process is simplified. The JavaScript library is built with Webpack which
  also handles other build tasks.
- Updated the Git engine to compile with the latest version of Emscripten
  which also drastically reduced the size of the resulting JavaScript file
- Automated testing has been rewritten using Webdriver.io and Selenium
- Added documentation for how to get development environment for Vorple itself
  and its tests installed and running
- Vorple is published in nmp: https://www.npmjs.com/package/vorple


Release 3.0 preview (2017-04-29)
================================

Version 3 is a complete rewrite. Instead of Parchment, it's built on top of
Git (https://github.com/DavidKinder/Git) and CheapGlk
(https://github.com/erkyrath/cheapglk) that have been compiled to JavaScript
(https://github.com/vorple/Git and https://github.com/vorple/cheapglk).
The frontend uses Haven (https://github.com/vorple/haven).

The API has changed completely, so individual changes are not specified here.

Version 3 doesn't directly support Undum anymore. With Undum please use
version 2.5.


Libraries
---------

- Replaced the notification/modal library Noty with Toastr and Vex
- Replaced the tooltip library qTip2 with PowerTip
- Added the Flexboxgrid library
- Updated jQuery to 3.1.1


Project
-------

- Inform extensions are split into a separate repository, so dual-licensing
  the entire project isn't necessary anymore: the JavaScript library is now
  using the MIT license and the Inform 7 extensions use the CC-BY license.